modified file `.htaccess`

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
+#This Apache config file was created by Duplicator Installer on 2020-07-06 08:06:24.
+#The original can be found in archived file with the name .htaccess__[HASH]
 
 # BEGIN WordPress
-# As diretrizes (linhas) entre `BEGIN WordPress` e` END WordPress` são
-# geradas dinamicamente e só devem ser modificadas através de filtros do WordPress.
-# Quaisquer alterações nas diretivas entre esses marcadores serão sobrescritas.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -11,5 +10,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
-
 # END WordPress
