modified file `.htaccess`

--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,9 @@
 #The original can be found in archived file with the name .htaccess__[HASH]
 
 # BEGIN WordPress
+# As diretrizes (linhas) entre `BEGIN WordPress` e` END WordPress` são
+# geradas dinamicamente e só devem ser modificadas através de filtros do WordPress.
+# Quaisquer alterações nas diretivas entre esses marcadores serão sobrescritas.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -10,4 +13,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
+
 # END WordPress
